feedback.txt
Your test suite did not compile!

tests/tests.cc:81:78: error: no type named 'incalid_argument' in namespace 'std'; did you mean 'invalid_argument'?
   81 |   REQUIRE_THROWS_AS(atm.RegisterAccount(12345678, 1234, "Bob", 100.00), std::incalid_argument);
      |                                                                         ~~~~~^~~~~~~~~~~~~~~~
      |                                                                              invalid_argument
tests/catch.hpp:17680:97: note: expanded from macro 'REQUIRE_THROWS_AS'
 17680 | #define REQUIRE_THROWS_AS( expr, exceptionType ) INTERNAL_CATCH_THROWS_AS( "REQUIRE_THROWS_AS", exceptionType, Catch::ResultDisposition::Normal, expr )
       |                                                                                                 ^~~~~~~~~~~~~
tests/catch.hpp:2766:20: note: expanded from macro 'INTERNAL_CATCH_THROWS_AS'
 2766 |             catch( exceptionType const& ) { \
      |                    ^~~~~~~~~~~~~
/usr/bin/../lib/gcc/x86_64-linux-gnu/14/../../../../include/c++/14/stdexcept:168:9: note: 'invalid_argument' declared here
  168 |   class invalid_argument : public logic_error
      |         ^
tests/tests.cc:84:1: error: a type specifier is required for all declarations
   84 | TEST_CAST("取钱时候存负数钱", "[普通问题]") {
      | ^
tests/tests.cc:84:56: error: expected ';' after top level declarator
   84 | TEST_CAST("取钱时候存负数钱", "[普通问题]") {
      |                                            ^
      |                                            ;
tests/tests.cc:92:1: error: a type specifier is required for all declarations
   92 | TEST_CAST("存钱时候存负数钱", "[普通问题]") {
      | ^
tests/tests.cc:92:56: error: expected ';' after top level declarator
   92 | TEST_CAST("存钱时候存负数钱", "[普通问题]") {
      |                                            ^
      |                                            ;
tests/tests.cc:100:1: error: a type specifier is required for all declarations
  100 | TEST_CAST("无效账号", "[普通问题]") {
      | ^
tests/tests.cc:100:44: error: expected ';' after top level declarator
  100 | TEST_CAST("无效账号", "[普通问题]") {
      |                                    ^
      |                                    ;
7 errors generated.


score: 0/5
